# schooloprog

./: README.org  cal.ics  dune-project  program.sexp  schooloprog.opam
lib/: dune  schooloprog.ml
test/: dune  test_schooloprog.ml
